--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/npm/chart.js@3.6.2/dist/chart.min.js"></script>
+    <link rel="stylesheet" href="/style.css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.2/chart.min.js"></script>
     <title>corona</title>
 </head>
 
 <body>
-    <canvas id="chartContinent" width="400" height="400"></canvas>
-    <script>
-
-    </script>
+    <canvas id="chartContinent"></canvas>
+    <script src="/script/scriptCorona.js"></script>
 </body>
 
 </html>
