--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
     <canvas id="chartContinent"></canvas>
+    <div class="contiDiv">
+        <button class="Asiabutton">Asia</button>
+        <button class="Americabutton">America</button>
+        <button class="Europebutton">Europe</button>
+        <button class="Africabutton">Africe</button>
+        <button class="Worldbutton">World</button>
+    </div>
     <script src="/script/scriptCorona.js"></script>
 </body>
 
