--- a/test3.html
+++ b/test3.html
@@ -73,6 +73,10 @@
             .then(array => {
                 // function that will [rint the chart]
             })
+        let arrAsia = [];
+        let arrEurope = [];
+        let arrAfrice = [];
+        let America = [];
     </script>
 </body>
 
