--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
-    <canvas id="chartContinent"></canvas>
-    <div class="contiDiv">
-        <button class="Asiabutton">Asia</button>
-        <button class="Americabutton">America</button>
-        <button class="Europebutton">Europe</button>
-        <button class="Africabutton">Africe</button>
-        <button class="Worldbutton">World</button>
+    <div class="canvas">
+        <canvas id="chartContinent"></canvas>
+    </div>
+    <div class="contiDiv1">
+        <button class="button">Confirmed</button>
+        <button class="button">Deaths</button>
+        <button class="button">Recoverd</button>
+        <button class="button">Critical</button>
+    </div>
+    <div class="contiDiv2">
+        <button class="buttonconti">Asia</button>
+        <button class="buttonconti">America</button>
+        <button class="buttonconti">Europe</button>
+        <button class="buttonconti">Africa</button>
+        <button class="buttonconti">World</button>
     </div>
     <script src="/script/scriptCorona.js"></script>
 </body>
