--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <button class="button">Critical</button>
     </div>
     <div class="contiDiv2">
-        <button data-type="asia" class="buttonconti">Asia</button>
+        <!-- <button data-type="asia" class="buttonconti">Asia</button> -->
+        <button class="buttonconti">Asia</button>
+        <!-- <button data-type="america" class="buttonconti">America</button> -->
         <button class="buttonconti">America</button>
         <button class="buttonconti">Europe</button>
         <button class="buttonconti">Africa</button>
