--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     </div>
     <div class="contiDiv2">
         <!-- <button data-type="asia" class="buttonconti">Asia</button> -->
-        <button class="buttonconti">Asia</button>
-        <!-- <button data-type="america" class="buttonconti">America</button> -->
-        <button class="buttonconti">America</button>
-        <button class="buttonconti">Europe</button>
-        <button class="buttonconti">Africa</button>
-        <button class="buttonconti">World</button>
+        <button class="buttonconti asiaButton">Asia</button>
+        <!-- <button data-type="america" class="button">America</button> -->
+        <button class="buttonConti americaButton">America</button>
+        <button class="buttonConti europeButton">Europe</button>
+        <button class="buttonConti africaButton">Africa</button>
+        <button class="buttonConti oceaniaButton">Oceania</button>
+
+
+        <button class="buttocConti worldButton">World</button>
     </div>
     <script src="/script/scriptCorona.js"></script>
 </body>
