--- a/index.html
+++ b/index.html
@@ -15,22 +15,46 @@
         <canvas id="chartContinent"></canvas>
     </div>
     <div class="contiDiv1">
-        <button class="button">Confirmed</button>
-        <button class="button">Deaths</button>
-        <button class="button">Recoverd</button>
-        <button class="button">Critical</button>
+        <button class="button confirmed">Confirmed</button>
+        <button class="button deaths">Deaths</button>
+        <button class="button recovered">Recoverd</button>
+        <button class="button critical">Critical</button>
     </div>
     <div class="contiDiv2">
-        <!-- <button data-type="asia" class="buttonconti">Asia</button> -->
-        <button class="buttonconti asiaButton">Asia</button>
-        <!-- <button data-type="america" class="button">America</button> -->
+        <button class="buttonConti asiaButton">Asia</button>
         <button class="buttonConti americaButton">America</button>
         <button class="buttonConti europeButton">Europe</button>
         <button class="buttonConti africaButton">Africa</button>
         <button class="buttonConti oceaniaButton">Oceania</button>
+        <button class="buttocnConti worldButton">World</button>
+    </div>
+    <div class="countriesForEachRegion"></div>
 
-
-        <button class="buttocConti worldButton">World</button>
+    <div class="casesForEachCountry">
+        <div class="totalCases box">
+            <p>TotalCases</p>
+            <p></p>
+        </div>
+        <div class="newCases box">
+            <p>NewCases</p>
+            <p></p>
+        </div>
+        <div class="totalDeath box">
+            <p>totalDeath</p>
+            <p></p>
+        </div>
+        <div class="newDeath box">
+            <p>newDeath</p>
+            <p></p>
+        </div>
+        <div class="totalrecoverd box">
+            <p>totalrecoverd</p>
+            <p></p>
+        </div>
+        <div class="critical box">
+            <p>critical</p>
+            <p></p>
+        </div>
     </div>
     <script src="/script/scriptCorona.js"></script>
 </body>
